syntax = "proto3";
package shapegeometry;
option csharp_namespace = "Xbim.Geometry.ProtoBuffer";

message ShapeGeometryDTO 
{
  enum SchemaVersion
  {
		Undefined = 0;
  		Ifc2X3 = 1;
  		Ifc4 = 2;
  }

  message ModelfactorsDTO
  {
		double OneMilliMeter = 1;
        double Precision = 2;
        double PrecisionMax = 3;
        int32 ProfileDefLevelOfDetail = 4;
        double AngleToRadiansConversionFactor = 5;
        double DeflectionAngle = 6;
        double DeflectionTolerance = 7;
        int32 MaxBRepSewFaceCount = 8;
  }

  SchemaVersion IfcVersion = 1;
  int32 GeometryId = 2;
  int32 EntityVariantId = 3;
  string RootIfcGeometryType = 4;
  ModelfactorsDTO ModelFactors = 5;
  string IfcGeometryDefinition = 6;  
  int32 ShapeMaterialId = 7;

  message Matrix3dDTO
  {
		 double M11 = 1;
		 double M12 = 2;
		 double M13 = 3;
		 double M14 = 4;
		 double M21 = 5;
		 double M22 = 6;
		 double M23 = 7;
		 double M24 = 8;
		 double M31 = 9;
		 double M32 = 10;
		 double M33 = 11;
		 double M34 = 12;
		 double OffsetX = 13;
		 double OffsetY = 14;
		 double OffsetZ = 15;
		 double M44 = 16;
  }

  message ShapeMapDTO {
    int32 VoidShapeId = 1;
    Matrix3dDTO Transform = 2;
	Matrix3dDTO Placement = 3;
	repeated int32 VoidGeometryIds = 4;
	repeated ShapeMapDTO NestedShapeMaps = 5;
  }

  repeated ShapeMapDTO VoidingShapes = 8;
}

