syntax = "proto3";
package wexbim;
option csharp_namespace = "Xbim.Geometry.ProtoBuffer";

message WexBimShapeDTO
{
	int32 AssetModelId = 1;
	int32 ShapeGeometryId = 2;
	int32 EntityVariantId = 3;
	bytes Triangulation = 4;
	bytes BoundingBox = 5;
    double Volume = 6;
	int32 MaterialId = 7;
}